--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
-    "@types/three": "^0.160.0",
     "@playwright/test": "^1.41.2",
+    "@types/node": "^24.3.0",
+    "@types/three": "^0.160.0",
     "typescript": "^5.4.0",
     "vite": "^5.1.0"
   }
 }
-
